--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "php": "~5.4 || ~7.0"
   },
   "require-dev": {
-    "phpspec/phpspec": "^3.2"
+    "phpspec/phpspec": "~2.5.5"
   },
   "extra": {
     "branch-alias": {
