--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     }
   },
   "require": {
-    "php": "~5.3 || ~7.0"
+    "php": ">5.3"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.5.5"
